--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 ul {
-    margin-top: 3px;
+    margin-top: 0.5%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -218,9 +218,11 @@ a .imgLogo {
 
 .prev, .next {
     width: 50px;
+    height: 50px;
     background-color: rgba(0, 0, 0, 0.445);
     border: 0;
     position: relative;
+    border-radius: 100px;
 }
 
 .prev {
@@ -228,14 +230,15 @@ a .imgLogo {
 }
 
 .titulo h2{
-    text-align: center;
-    background-image: linear-gradient(to right, #b2f9ff, #1e8799);
-    font-size: 60px;
     color: #277fbd;
+    background-image: linear-gradient(to right, #56ecf9, #277fbd);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    background-clip: text;
+    display: block;
     font-weight: 1000;
     margin-bottom: 100px;
+    text-align: center;
 }
 
 .cards-div {
@@ -248,9 +251,9 @@ a .imgLogo {
 .card-div {
     width: 300px;
     height: 600px;
-    background-color: rgba(255, 255, 255, 0.466);
+    background-color: rgba(177, 177, 177, 0.281);
     margin: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     border-radius: 20px;
 }
 
@@ -282,4 +285,63 @@ a .imgLogo {
     font-size: 16px;
     text-align: justify;
     margin: 20px;
+}
+
+.ci2 {
+    height: 120px;
+}
+
+.div-localizacao img {
+    width: 50px;
+    height: 50px;
+}
+
+#localizacao {
+    display: flex;
+    width: 100vw;
+    justify-content: space-between;
+}
+
+.mapa, .div-localizacao {
+    width: 50vw;
+}
+
+.div-localizacao {
+    text-align: center;
+    align-items: center;
+    background-color: #2b83be;
+    color: white;
+    margin: 0 auto;
+}
+
+.div-localizacao h2 {
+    margin-top: 15%;
+}
+
+.mapa iframe {
+    width: 100%;
+}
+
+#footer {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100vw;
+    background-color: #3a3a3a;
+    height: 300px;
+    margin: 0 auto;
+    align-items: top;
+}
+
+#footer .col1 {
+    margin-top: 30px;
+    width: 10vw;
+    color: white;
+}
+
+.col1 h3 {
+    font-size: 26px;
+}
+
+.col1 h4 {
+    font-size: 20px;
 }
